...
        child: Form(
          key: _formKey,
          child: Column(
            crossAxisAlignment: CrossAxisAlignment.stretch,
            children: [
              Semantics(
                identifier: 'app-name-input',
                child: TextFormField(
                  decoration: InputDecoration(labelText: 'App name'.hardcoded),
                  keyboardAppearance: Theme.of(context).brightness,
                  textCapitalization: TextCapitalization.words,
                  initialValue: _name,
                  validator: (value) => (value ?? '').isNotEmpty
...
                  onSaved: (value) => _name = value ?? '',
                  onEditingComplete: _submit,
                ),
              ),
              gapH16,
              Semantics(
                identifier: 'save-button',
                child: ElevatedButton(
                  onPressed: _submit,
                  child: Text('Save'.hardcoded),
                ),
              ),
            ],
...
