# Helper flow to create a new app. Don't run this directly
appId: com.codewithandrea.flutter_ship_app.stg # Android
#appId: com.codewithandrea.flutterShipApp.stg # iOS
---

- tapOn:
    id: "create-new-app-action"
    label: "Tap on New App icon"
- tapOn:
    id: "app-name-input"
    label: "Select the app name input field"
- inputText: ${APP_NAME}
- tapOn:
    id: "save-button"
    label: "Tap on Save button"